<resources>
    <string name="app_name">s236308_mappe3</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="toPlace">Til:</string>
    <string name="fromPlace">Fra:</string>
    <string name="arrival">Ankomst:</string>
    <string name="departure">Avreise:</string>
    <string name="traveltime">Reisetid:</string>
</resources>
